[feat] 資格エリア追加

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -194,6 +194,36 @@ const headItems = {
         </ul>
       </div>
     </section>
+    <section id="Skills">
+      <div class="mx-auto max-w-7xl px-5 py-10">
+        <Heading level={2}>資格</Heading>
+        <div class="mt-6 overflow-x-auto">
+          <table class="min-w-full divide-y-2 divide-gray-200">
+            <thead class="ltr:text-left rtl:text-right">
+              <tr class="*:font-medium *:text-gray-900">
+                <th class="px-3 py-2 whitespace-nowrap">取得日</th>
+                <th class="px-3 py-2 whitespace-nowrap">資格名</th>
+              </tr>
+            </thead>
+
+            <tbody class="divide-y divide-gray-200 *:even:bg-gray-50">
+              <tr class="*:text-gray-900 *:first:font-medium">
+                <td class="px-3 py-2 whitespace-nowrap">2023/3</td>
+                <td class="px-3 py-2 whitespace-nowrap">AWS Certified Solutions Architect - Associate</td>
+              </tr>
+              <tr class="*:text-gray-900 *:first:font-medium">
+                <td class="px-3 py-2 whitespace-nowrap">2023/7</td>
+                <td class="px-3 py-2 whitespace-nowrap">TOEIC Listening & Reading 公開テスト 600点 取得</td>
+              </tr>
+              <tr class="*:text-gray-900 *:first:font-medium">
+                <td class="px-3 py-2 whitespace-nowrap">2025/11</td>
+                <td class="px-3 py-2 whitespace-nowrap">Salesforce 認定 Platform 基礎</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </section>
     <section id="Works">
       <div class="mx-auto max-w-7xl px-5 py-10">
         <Heading level={2}>制作実績</Heading>
